--- a/src/sass/master.scss
+++ b/src/sass/master.scss
@@ -8,6 +8,7 @@
 @import "theme-bootstrap/variables";
 
 @import 'base/typography';
+@import 'base/icon-font';
 
 @import 'layout/navigation';
 @import 'layout/header';
