update workflow and add template

--- a/src/sass/_bootstrap.scss
+++ b/src/sass/_bootstrap.scss
@@ -1,5 +1,9 @@
 // Core variables and mixins
 @import "../../vendor/bootstrap-sass/assets/stylesheets/bootstrap/variables";
+
+// CUSTOM VARIABLES
+@import "theme-bootstrap/variables";
+
 @import "../../vendor/bootstrap-sass/assets/stylesheets/bootstrap/mixins";
 
 // Reset and dependencies
