--- a/src/sass/_medias.scss
+++ b/src/sass/_medias.scss
@@ -18,6 +18,18 @@
 /* Medium Devices, Desktops */
 @media only screen and (min-width : 992px) {
 
+	// Sticky footer
+	footer {
+		position: absolute;
+		bottom: 0;
+		height: 150px;
+	}
+
+	body {
+		/* Margin bottom by footer height */
+		margin-bottom: $footer-height;
+	}
+
 }
 
 /* Large Devices, Wide Screens */
