--- a/src/sass/master.scss
+++ b/src/sass/master.scss
@@ -1,6 +1,7 @@
 @import "compass";
 
 @import "bootstrap";
+@import "theme-bootstrap/theme";
 
 @import 'utils/variables';
 @import 'utils/functions';
@@ -9,12 +10,18 @@
 
 @import 'base/typography';
 @import 'base/icon-font';
+@import 'base/buttons';
 
 @import 'layout/navigation';
 @import 'layout/header';
 @import 'layout/footer';
 @import 'layout/search';
+@import 'layout/common';
 
 @import 'pages/home';
 
 @import "medias";
+
+* {
+	outline: none !important;
+}
