update elixir and structure

--- a/assets/src/public/sass/backend.scss
+++ b/assets/src/public/sass/backend.scss
@@ -1,7 +1,7 @@
 // Réduire la taille des vendors en sélectionnant au cas par cas seulement les partials nécessaires
 
-@import 'vendor/fileinput';
+@import 'vendors/fileinput';
 
-@import 'vendor/quill';
+@import 'vendors/quill.snow';
 
-@import 'vendor/selectivity-full';
+@import 'vendors/select3-full';
