add custom theme

--- a/assets/src/public/sass/layout/_common.scss
+++ b/assets/src/public/sass/layout/_common.scss
@@ -1,6 +1,10 @@
 /* Common rules
 -------------------------------------------------- */
 
+* {
+	outline: 0;
+}
+
 html {
 	position: relative;
 	min-height: 100%;
