--- a/assets/src/public/sass/themes/minecraft.scss
+++ b/assets/src/public/sass/themes/minecraft.scss
@@ -2,6 +2,27 @@
 
 @import "../bootstrap";
 
+/* A CUSTOMISER */
+@import '../utils/variables';
+@import '../utils/functions';
+@import '../utils/mixins';
+@import '../utils/helpers';
+
+@import '../base/typography';
+@import '../base/icon-font';
+@import '../base/buttons';
+
+@import '../layout/navigation';
+@import '../layout/header';
+@import '../layout/footer';
+@import '../layout/search';
+@import '../layout/common';
+
+@import '../pages/home';
+
+@import "../medias";
+
+
 body {
-	background: green;
+	//background: green;
 }
