--- a/assets/src/public/sass/themes/minecraft.scss
+++ b/assets/src/public/sass/themes/minecraft.scss
@@ -20,9 +20,11 @@
 
 @import '../pages/home';
 
+@import "../vendors/full_form/master";
+
 @import "../medias";
 
 
 body {
-	//background: green;
+	/*background: green;*/
 }
