--- a/assets/src/public/sass/utils/_helpers.scss
+++ b/assets/src/public/sass/utils/_helpers.scss
@@ -9,3 +9,10 @@
 	width: 100%;
     height: 100%;
 }
+
+.icon-flip {
+	@include transition(transform .5s);
+	&:hover {
+		@include transform(scale(-1, 1));
+	}
+}
