update for server show

--- a/assets/src/public/sass/master.scss
+++ b/assets/src/public/sass/master.scss
@@ -12,6 +12,8 @@
 @import 'base/icon-font';
 @import 'base/buttons';
 
+@import 'vendors/sweetalert';
+
 @import 'layout/navigation';
 @import 'layout/header';
 @import 'layout/footer';
