--- a/assets/src/public/sass/themes/minecraft.scss
+++ b/assets/src/public/sass/themes/minecraft.scss
@@ -12,6 +12,8 @@
 @import '../base/icon-font';
 @import '../base/buttons';
 
+@import '../vendors/sweetalert';
+
 @import '../layout/navigation';
 @import '../layout/header';
 @import '../layout/footer';
@@ -20,6 +22,7 @@
 @import '../layout/profile';
 
 @import '../pages/home';
+@import '../pages/server';
 
 @import "../vendors/full_form/master";
 
