--- a/assets/src/public/sass/utils/_helpers.scss
+++ b/assets/src/public/sass/utils/_helpers.scss
@@ -14,6 +14,15 @@
     height: 100%;
 }
 
+/**
+ * Icons
+ */
+
+.icon {
+	position: relative;
+	top: 2px;
+}
+
 .icon-flip {
 	@include transition(transform .5s);
 	&:hover {
