--- a/assets/src/public/sass/themes/minecraft.scss
+++ b/assets/src/public/sass/themes/minecraft.scss
@@ -7,6 +7,7 @@
 @import '../utils/functions';
 @import '../utils/mixins';
 @import '../utils/helpers';
+@import '../utils/sprites';
 
 @import '../base/typography';
 @import '../base/icon-font';
