--- a/assets/src/public/sass/themes/minecraft.scss
+++ b/assets/src/public/sass/themes/minecraft.scss
@@ -25,6 +25,8 @@
 @import '../pages/home';
 @import '../pages/server';
 
+@import '../layout/server';
+
 @import "../vendors/full_form/master";
 
 @import "../medias";
