--- a/assets/src/public/sass/themes/rust.scss
+++ b/assets/src/public/sass/themes/rust.scss
@@ -6,6 +6,7 @@
 @import '../vendors/sweetalert';
 
 @import '../pages/server';
+@import '../pages/pricing';
 
 body {
 	background: url('http://static2.gamespot.com/uploads/original/536/5360430/2414961-2013-11-25_00008.jpg') orange;
