fix bug: mustache missing

--- a/assets/src/public/sass/pages/_pricing.scss
+++ b/assets/src/public/sass/pages/_pricing.scss
@@ -9,7 +9,7 @@
 .panel-pricing .panel-heading {
   padding: 20px 10px;
 }
-.panel-pricing .panel-heading 
+.panel-pricing .panel-heading {
   .icon-pricing {
     margin-top: 10px;
     font-size: 58px;
