use common scss files for the themes

--- a/assets/src/public/sass/themes/default.scss
+++ b/assets/src/public/sass/themes/default.scss
@@ -1,12 +1,8 @@
 @import "compass";
 
 @import "../bootstrap";
-@import '../layout/profile';
 
-@import '../vendors/sweetalert';
-
-@import '../pages/server';
-@import '../pages/pricing';
+@import '../base/common-theme';
 
 body {
 	background: grey;
