--- a/assets/src/public/sass/layout/_footer.scss
+++ b/assets/src/public/sass/layout/_footer.scss
@@ -1,10 +1,38 @@
 footer {
-	padding-top: 10px;
 	width: 100%;
-	background-color: #f5f5f5;
-
-	> .container {
-		padding-right: 15px;
-		padding-left: 15px;
+	a {
+		color: $link-color-footer;
+		&:hover {
+			color: $hover-link-color-footer;
+		}
 	}
+	.footer-core {
+		padding-top: 10px;
+		min-height: 200px;
+		padding-bottom: 20px;
+
+		background-color: $bg-footer;
+
+		border-bottom: 1px solid $border-bottom-footer;
+		border-top: 1px solid $border-top-footer;
+
+		.top-trend {
+			h4 {
+				margin-top: 0;
+				margin-bottom: 5px;
+			}
+			ul {
+				padding-left: 10px;
+			}
+		}
+
+	}
+
+	.footer-bottom {
+		background: #E3E3E3;
+		border-top: 1px solid $border-top-footer;
+		padding-top: 10px;
+		padding-bottom: 8px;
+	}
+
 }
