--- a/assets/src/public/sass/layout/_server.scss
+++ b/assets/src/public/sass/layout/_server.scss
@@ -1,5 +1,9 @@
 .well-server {
-	background: #FFF;
+	background: #fff;
+	border-radius: 6px;
+	box-shadow: 0 2px 0 0 #e5e5e5;
+	margin: 0 0 1em;
+	padding: 1em;
 
 	h4 {
 		margin-top: 0;
