--- a/assets/src/public/sass/themes/minecraft.scss
+++ b/assets/src/public/sass/themes/minecraft.scss
@@ -1,9 +1,20 @@
 @import "compass";
 
+
 @import "../bootstrap";
+
+@import '../utils/variables';
+
+$bg-footer: #444;
+
 
 @import '../base/common-theme';
 
 body {
-	/*background: green;*/
+	background: #f5f5f5;
+	color: #646464;
+}
+
+.well-server {
+	border: none;
 }
