--- a/assets/src/public/sass/utils/_variables.scss
+++ b/assets/src/public/sass/utils/_variables.scss
@@ -34,7 +34,17 @@ $search-bg: rgba(0, 0, 0, 0.8);
  */
 $close-btn-color: lighten($search-bg, 80);
 
+
 /**
  * Footer height for fix in the bottom
  */
-$footer-height: 150px;
+$footer-height: 200px;
+
+/**
+ * Footer colors
+ */
+$bg-footer: #f5f5f5 !default;
+$border-top-footer: #DDDDDD !default;
+$border-bottom-footer: #CCCCCC !default;
+$link-color-footer: #f5f5f5 !default;
+$hover-link-color-footer: darken($link-color-footer, 20) !default;
