--- a/assets/src/public/sass/theme-bootstrap/_variables.scss
+++ b/assets/src/public/sass/theme-bootstrap/_variables.scss
@@ -16,6 +16,9 @@ $brand-warning:         #f0ad4e;
 $brand-danger:          #d9534f;
 
 
+$navbar-default-bg: none;
+$border-color: transparent;
+
 //== Scaffolding
 //
 //## Settings for some of the most global styles.
@@ -96,3 +99,4 @@ $pagination-disabled-border:           #ddd;
 // Navbar
 $navbar-margin-bottom: 0px;
 $navbar-border-radius: 0px;
+
