--- a/assets/src/public/sass/base/_common-theme.scss
+++ b/assets/src/public/sass/base/_common-theme.scss
@@ -16,6 +16,7 @@
 @import '../layout/search';
 @import '../layout/common';
 @import '../layout/profile';
+@import '../layout/mega-menu';
 
 @import '../pages/home';
 @import '../pages/server';
