--- a/assets/src/public/sass/layout/_mega-menu.scss
+++ b/assets/src/public/sass/layout/_mega-menu.scss
@@ -4,9 +4,10 @@
 .mega-dropdown-menu {
     padding: 20px 0px;
     width: 100%;
-    box-shadow: none;
+   /* box-shadow: none;
     -webkit-box-shadow: none;
-    border: none;
+    border: none;*/
+    /*border-top: none;*/
 }
 .mega-dropdown-menu > li > ul {
   padding: 0;
