--- a/assets/src/public/sass/pages/_home.scss
+++ b/assets/src/public/sass/pages/_home.scss
@@ -9,8 +9,8 @@ code {
 // Will be ignored by uncss (gulp) :
 /* uncss:ignore */
 
-.tri {
+/*.tri {
 	.btn-group {
 		position: initial;
 	}
-}
+}*/
