--- a/assets/src/public/sass/layout/_search.scss
+++ b/assets/src/public/sass/layout/_search.scss
@@ -89,4 +89,7 @@
     .selectivity-multiple-input {
         min-width: 150px !important;
     }
+    .search-type {
+        min-height: 42px;
+    }
 }
