new form system

--- a/assets/src/public/sass/base/_common-theme.scss
+++ b/assets/src/public/sass/base/_common-theme.scss
@@ -17,6 +17,7 @@
 @import '../layout/common';
 @import '../layout/profile';
 @import '../layout/mega-menu';
+@import '../layout/form-add';
 
 @import '../pages/home';
 @import '../pages/server';
